--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -2,4 +2,9 @@
 <!--Welcome to the Registration Form project! -->
 <!--Start by adding the !DOCTYPE html declaration at the top of the document so the browser knows what type of document it's reading.-->
 <!DOCTYPE html>
+<!--Step 2-->
+<!--Below the DOCTYPE, add an html element with a lang attribute set to en, so that you have a place to start putting some code.-->
+<html lang="en">
+
+</html>
 
