--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -5,6 +5,13 @@
 <!--Step 2-->
 <!--Below the DOCTYPE, add an html element with a lang attribute set to en, so that you have a place to start putting some code.-->
 <html lang="en">
+<!--Step 3-->
+<!--Next, add opening and closing head and body tags within the html element.-->
+<head>
 
+</head>
+<body>
+
+</body>
 </html>
 
