--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -8,7 +8,11 @@
 <!--Step 3-->
 <!--Next, add opening and closing head and body tags within the html element.-->
 <head>
-
+<!--    Step 4-->
+<!--    Add a title and meta element inside the head element. -->
+<!--    Give your project a title of Registration Form, and add the charset attribute with a value of utf-8 to your meta element.-->
+    <meta charset="UTF-8">
+    <title>Registration Form</title>
 </head>
 <body>
 
