--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -13,6 +13,10 @@
 <!--    Give your project a title of Registration Form, and add the charset attribute with a value of utf-8 to your meta element.-->
     <meta charset="UTF-8">
     <title>Registration Form</title>
+<!--    Step 5-->
+<!--    Nest a link element within the head element. -->
+<!--    Give it a rel attribute with a value of stylesheet and an href attribute with a value of styles.css.-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
