--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<!--    Step 6-->
+<!--    Within the body, provide a heading context for the content, by adding an h1 with the text Registration Form.-->
+    <h1>Registration Form</h1>
 </body>
 </html>
 
