--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -22,6 +22,11 @@
 <!--    Step 6-->
 <!--    Within the body, provide a heading context for the content, by adding an h1 with the text Registration Form.-->
     <h1>Registration Form</h1>
+<!--    Step 7-->
+<!--    Below the heading, use the following text within a paragraph element to encourage users to register:-->
+<!--    Example Code-->
+<!--    Please fill out this form with the required information-->
+    <p>Please fill out this form with the required information</p>
 </body>
 </html>
 
