--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -27,6 +27,9 @@
 <!--    Example Code-->
 <!--    Please fill out this form with the required information-->
     <p>Please fill out this form with the required information</p>
+<!--    Step 11-->
+<!--    As suggested by the title, you are creating a form. So, after the p element, insert a form with an action attribute targeting https://register-demo.freecodecamp.org.-->
+    <form action="https://register-demo.freecodecamp.org" method="get"></form>
 </body>
 </html>
 
