--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -33,7 +33,13 @@
 <!--    The method attribute specifies how to send form-data to the URL specified in the action attribute. -->
 <!--    The form-data can be sent via a GET request as URL parameters (with method="get") or via a POST request as data in the request body (with method="post").-->
 <!--    Set the method attribute to send your form data via a POST request.-->
-    <form action="https://register-demo.freecodecamp.org" method="post"></form>
+    <form action="https://register-demo.freecodecamp.org" method="post">
+<!--        Step 13-->
+<!--        As the form will have three distinct sections, add three fieldset elements within the form element.-->
+        <fieldset></fieldset>
+        <fieldset></fieldset>
+        <fieldset></fieldset>
+    </form>
 </body>
 </html>
 
