--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -36,7 +36,16 @@
     <form action="https://register-demo.freecodecamp.org" method="post">
 <!--        Step 13-->
 <!--        As the form will have three distinct sections, add three fieldset elements within the form element.-->
-        <fieldset></fieldset>
+        <fieldset>
+<!--            Step 14-->
+<!--            The first fieldset will hold name, email, and password fields. -->
+<!--            Start by adding four label elements to the first fieldset.-->
+
+            <label></label>
+            <label></label>
+            <label></label>
+            <label></label>
+        </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
     </form>
