--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -40,11 +40,16 @@
 <!--            Step 14-->
 <!--            The first fieldset will hold name, email, and password fields. -->
 <!--            Start by adding four label elements to the first fieldset.-->
-
-            <label></label>
-            <label></label>
-            <label></label>
-            <label></label>
+<!--            Step 15-->
+<!--            Add the following text to the label elements:-->
+<!--            Enter Your First Name:-->
+<!--            Enter Your Last Name:-->
+<!--            Enter Your Email:-->
+<!--            Create a New Password:-->
+            <label>Enter Your First Name:</label>
+            <label>Enter Your Last Name:</label>
+            <label>Enter Your Email:</label>
+            <label>Create a New Password:</label>
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
