--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -46,10 +46,13 @@
 <!--            Enter Your Last Name:-->
 <!--            Enter Your Email:-->
 <!--            Create a New Password:-->
-            <label>Enter Your First Name:</label>
-            <label>Enter Your Last Name:</label>
-            <label>Enter Your Email:</label>
-            <label>Create a New Password:</label>
+<!--            Step 17-->
+<!--            Nest an input element within each label. -->
+<!--            Be sure to add each input after the label text, and include a space after the colon.-->
+            <label>Enter Your First Name: <input type="text"></label>
+            <label>Enter Your Last Name: <input type="text"></label>
+            <label>Enter Your Email: <input type="text"></label>
+            <label>Create a New Password: <input type="text"></label>
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
