--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -52,10 +52,14 @@
 <!--            Step 18-->
 <!--            Following accessibility best practices, link the input elements and the label elements together using the for attribute.-->
 <!--            Use first-name, last-name, email, and new-password as values for the respective id attributes.-->
+<!--            Step 19-->
+<!--            Specifying the type attribute of a form element is important for the browser to know what kind of data it should expect. -->
+<!--            If the type is not specified, the browser will default to text.-->
+<!--            Give the first two input elements a type attribute of text, the third a type attribute of email, and the fourth a type attribute of password.-->
             <label for="first-name">Enter Your First Name: <input type="text" id="first-name"></label>
             <label for="last-name">Enter Your Last Name: <input type="text" id="last-name"></label>
-            <label for="email">Enter Your Email: <input type="text" id="email"></label>
-            <label for="new-password">Create a New Password: <input type="text" id="new-password"></label>
+            <label for="email">Enter Your Email: <input type="email" id="email"></label>
+            <label for="new-password">Create a New Password: <input type="password" id="new-password"></label>
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
