--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -63,6 +63,10 @@
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
+<!--        Step 20-->
+<!--        The first input element with a type of submit is automatically set to submit its nearest parent form element.-->
+<!--        To handle the form submission, after the last fieldset element add an input element with the type attribute set to submit and the value attribute set to Submit.-->
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
