--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -56,10 +56,12 @@
 <!--            Specifying the type attribute of a form element is important for the browser to know what kind of data it should expect. -->
 <!--            If the type is not specified, the browser will default to text.-->
 <!--            Give the first two input elements a type attribute of text, the third a type attribute of email, and the fourth a type attribute of password.-->
-            <label for="first-name">Enter Your First Name: <input type="text" id="first-name"></label>
-            <label for="last-name">Enter Your Last Name: <input type="text" id="last-name"></label>
-            <label for="email">Enter Your Email: <input type="email" id="email"></label>
-            <label for="new-password">Create a New Password: <input type="password" id="new-password"></label>
+<!--            Step 21-->
+<!--            To make the form more interactive, add the required attribute to the input elements in the first fieldset.-->
+            <label for="first-name">Enter Your First Name: <input type="text" id="first-name" required></label>
+            <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" required></label>
+            <label for="email">Enter Your Email: <input type="email" id="email" required></label>
+            <label for="new-password">Create a New Password: <input type="password" id="new-password" required></label>
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
