--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -58,10 +58,15 @@
 <!--            Give the first two input elements a type attribute of text, the third a type attribute of email, and the fourth a type attribute of password.-->
 <!--            Step 21-->
 <!--            To make the form more interactive, add the required attribute to the input elements in the first fieldset.-->
+<!--            Step 22-->
+<!--            Certain type attribute values come with built-in form validation. -->
+<!--            For example, type="email" requires that the value be a valid email address.-->
+<!--            Add custom validation to the password input element, by adding a minlength attribute with a value of 8. -->
+<!--            Doing so prevents inputs of less than 8 characters being submitted.-->
             <label for="first-name">Enter Your First Name: <input type="text" id="first-name" required></label>
             <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" required></label>
-            <label for="email">Enter Your Email: <input type="email" id="email" required></label>
-            <label for="new-password">Create a New Password: <input type="password" id="new-password" required></label>
+            <label for="email">Enter Your Email: <input type="email" id="email" required minlength="8"></label>
+            <label for="new-password">Create a New Password: <input type="password" id="new-password" required minlength="8"></label>
         </fieldset>
         <fieldset></fieldset>
         <fieldset></fieldset>
