--- a/learnHTMLForms/index.html
+++ b/learnHTMLForms/index.html
@@ -1,78 +1,42 @@
-<!--Step 1-->
-<!--Welcome to the Registration Form project! -->
-<!--Start by adding the !DOCTYPE html declaration at the top of the document so the browser knows what type of document it's reading.-->
 <!DOCTYPE html>
-<!--Step 2-->
-<!--Below the DOCTYPE, add an html element with a lang attribute set to en, so that you have a place to start putting some code.-->
 <html lang="en">
-<!--Step 3-->
-<!--Next, add opening and closing head and body tags within the html element.-->
 <head>
-<!--    Step 4-->
-<!--    Add a title and meta element inside the head element. -->
-<!--    Give your project a title of Registration Form, and add the charset attribute with a value of utf-8 to your meta element.-->
     <meta charset="UTF-8">
     <title>Registration Form</title>
-<!--    Step 5-->
-<!--    Nest a link element within the head element. -->
-<!--    Give it a rel attribute with a value of stylesheet and an href attribute with a value of styles.css.-->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!--    Step 6-->
-<!--    Within the body, provide a heading context for the content, by adding an h1 with the text Registration Form.-->
     <h1>Registration Form</h1>
-<!--    Step 7-->
-<!--    Below the heading, use the following text within a paragraph element to encourage users to register:-->
-<!--    Example Code-->
-<!--    Please fill out this form with the required information-->
     <p>Please fill out this form with the required information</p>
-<!--    Step 11-->
-<!--    As suggested by the title, you are creating a form. So, after the p element, insert a form with an action attribute targeting https://register-demo.freecodecamp.org.-->
-<!--    Step 12-->
-<!--    The method attribute specifies how to send form-data to the URL specified in the action attribute. -->
-<!--    The form-data can be sent via a GET request as URL parameters (with method="get") or via a POST request as data in the request body (with method="post").-->
-<!--    Set the method attribute to send your form data via a POST request.-->
     <form action="https://register-demo.freecodecamp.org" method="post">
-<!--        Step 13-->
-<!--        As the form will have three distinct sections, add three fieldset elements within the form element.-->
         <fieldset>
-<!--            Step 14-->
-<!--            The first fieldset will hold name, email, and password fields. -->
-<!--            Start by adding four label elements to the first fieldset.-->
-<!--            Step 15-->
-<!--            Add the following text to the label elements:-->
-<!--            Enter Your First Name:-->
-<!--            Enter Your Last Name:-->
-<!--            Enter Your Email:-->
-<!--            Create a New Password:-->
-<!--            Step 17-->
-<!--            Nest an input element within each label. -->
-<!--            Be sure to add each input after the label text, and include a space after the colon.-->
-<!--            Step 18-->
-<!--            Following accessibility best practices, link the input elements and the label elements together using the for attribute.-->
-<!--            Use first-name, last-name, email, and new-password as values for the respective id attributes.-->
-<!--            Step 19-->
-<!--            Specifying the type attribute of a form element is important for the browser to know what kind of data it should expect. -->
-<!--            If the type is not specified, the browser will default to text.-->
-<!--            Give the first two input elements a type attribute of text, the third a type attribute of email, and the fourth a type attribute of password.-->
-<!--            Step 21-->
-<!--            To make the form more interactive, add the required attribute to the input elements in the first fieldset.-->
-<!--            Step 22-->
-<!--            Certain type attribute values come with built-in form validation. -->
-<!--            For example, type="email" requires that the value be a valid email address.-->
-<!--            Add custom validation to the password input element, by adding a minlength attribute with a value of 8. -->
-<!--            Doing so prevents inputs of less than 8 characters being submitted.-->
-            <label for="first-name">Enter Your First Name: <input type="text" id="first-name" required></label>
-            <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" required></label>
-            <label for="email">Enter Your Email: <input type="email" id="email" required minlength="8"></label>
-            <label for="new-password">Create a New Password: <input type="password" id="new-password" required minlength="8"></label>
+            <label for="first-name">Enter Your First Name: <input type="text" id="first-name" name="first-name" required></label>
+            <label for="last-name">Enter Your Last Name: <input type="text" id="last-name" name="last-name" required></label>
+            <label for="email">Enter Your Email: <input type="email" id="email" name="email" required minlength="8"></label>
+            <label for="new-password">Create a New Password: <input type="password" id="new-password" name="password" required pattern="[a-z0-5]{8,}"></label>
         </fieldset>
-        <fieldset></fieldset>
-        <fieldset></fieldset>
-<!--        Step 20-->
-<!--        The first input element with a type of submit is automatically set to submit its nearest parent form element.-->
-<!--        To handle the form submission, after the last fieldset element add an input element with the type attribute set to submit and the value attribute set to Submit.-->
+        <fieldset>
+            <legend>Account type (required)</legend>
+            <label for="personal-account"><input type="radio" name="account-type" id="personal-account" class="inline" checked> Personal</label>
+            <label for="business-account"><input type="radio" name="account-type" id="business-account" class="inline"> Business</label>
+        </fieldset>
+        <fieldset>
+            <label for="profile-picture">Upload a profile picture: <input type="file" name="file" id="profile-picture"></label>
+            <label for="age">Input your age (years): <input type="number" name="age" id="age" min="13" max="120" ></label>
+            <label for="referrer">How did you hear about us?
+                <select name="referrer" id="referrer">
+                    <option value="">(select one)</option>
+                    <option value="1">freeCodeCamp News</option>
+                    <option value="2">freeCodeCamp YouTube Channel</option>
+                    <option value="3">freeCodeCamp Forum</option>
+                    <option value="4">Other</option>
+                </select>
+            </label>
+            <label for="bio">Provide a bio: <textarea name="" id="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea></label>
+        </fieldset>
+        <label for="terms-and-conditions">
+            <input id="terms-and-conditions" type="checkbox" name="terms" class="inline" required />I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+        </label>
         <input type="submit" value="Submit">
     </form>
 </body>
